[tool.poetry]
name = "hwp-table-extractor"
version = "0.1.0"
description = ""
authors = ["Madung2 <tuliphan91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appdirs = "^1.4.4"
click = "^8.1.7"
jinja2 = "^3.1.4"
markupsafe = "^2.1.5"
olefile = "^0.47"
packaging = "^24.1"
pyparsing = "^3.1.2"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
